[package]
name = "rusted_thunder"
version = "0.1.0"
authors = ["Cédric Taschereau <cedric.taschereau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "^0.5.6"
gdk = "0.13.2"
gtk = "0.9.2"
gio = "0.9.1"
serde = "~1.0"
dirs = "^2.0"
tesla = { git = "https://github.com/ctaschereau/tesla-rs", branch = "master" }
